fix: fixing te design of products

--- a/public/locales/al/translation.json
+++ b/public/locales/al/translation.json
@@ -47,6 +47,7 @@
       "accessories": "Aksesorë"
     },
     "subCategories": {
+      "all": "Të gjitha",
       "cutting": "Prerje",
       "edgeBanding": "Bandazh Skajesh",
       "cnc": "CNC",
