--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -47,6 +47,7 @@
       "accessories": "Zubehör"
     },
     "subCategories": {
+      "all": "Alle",
       "cutting": "Schneiden",
       "edgeBanding": "Kantenbeschichtung",
       "cnc": "CNC",
