--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -47,6 +47,7 @@
       "accessories": "Accessori"
     },
     "subCategories": {
+      "all": "Tutti",
       "cutting": "Taglio",
       "edgeBanding": "Bordatura",
       "cnc": "CNC",
