--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -91,5 +91,19 @@
     "language": "Јазик",
     "readMore": "Прочитај повеќе",
     "readLess": "Прочитај помалку"
+  },
+  "favorites": {
+    "title": "Мои Омилени",
+    "empty": {
+      "title": "Нема омилени",
+      "description": "Започнете со додавање производи во омилени со кликнување на иконата срце.",
+      "browseProducts": "Прегледај Производи"
+    },
+    "clearAll": "Избриши Ги Сите"
+  },
+  "product": {
+    "from": "Од",
+    "addToFavorites": "Додај во Омилени",
+    "removeFromFavorites": "Отстрани од Омилени"
   }
 }
