--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -105,5 +105,24 @@
     "from": "Од",
     "addToFavorites": "Додај во Омилени",
     "removeFromFavorites": "Отстрани од Омилени"
+  },
+  "notFound": {
+    "subtitle": "Мебелот Не е Пронајден",
+    "title": "Упс! Оваа соба е празна 🪑",
+    "message": "Изгледа дека се изгубивте во неопремена соба. Не грижете се, имаме многу убави мебели за да го пополниме било кој простор!",
+    "goHome": "Оди во Салон",
+    "browseProducts": "Прегледај Мебел", 
+    "contact": "Контактирај Дизајнер",
+    "goBack": "Врати се Назад",
+    "funFact": {
+      "title": "Дали знаевте?",
+      "text": "Најстариот познат мебел датира од 3100-2500 г. пр. н. е. Во DoqiSHPK го комбинираме древното мајсторство со модерниот дизајн за да создадеме безвременски парчиња за вашиот дом."
+    },
+    "help": "Изгубени? Пробајте ги овие популарни секции:",
+    "footerMessage": "Изгубени во нашата мебелна земја на чудата? Дозволете ни да ве одведеме дома!",
+    "whoopsTitle": "Упс! Изгубени во вселената?",
+    "pageNotFoundMessage": "Страницата што ја барате не е пронајдена :(",
+    "suggestHome": "Ви предлагаме да се вратите дома",
+    "backToHome": "Назад кон Дома"
   }
 }
