--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -105,5 +105,24 @@
     "from": "Из",
     "addToFavorites": "Додај у Фаворите",
     "removeFromFavorites": "Уклони из Фаворита"
+  },
+  "notFound": {
+    "subtitle": "Намештај Није Пронађен",
+    "title": "Упс! Ова соба је празна 🪑",
+    "message": "Изгледа да сте залутали у неопремљену собу. Не брините, имамо пуно лепог намештаја да попунимо било који простор!",
+    "goHome": "Иди у Салон",
+    "browseProducts": "Прегледај Намештај", 
+    "contact": "Контактирај Дизајнера",
+    "goBack": "Иди Назад",
+    "funFact": {
+      "title": "Да ли сте знали?",
+      "text": "Најстарији познати намештај датира из 3100-2500. п. н. е. У DoqiSHPK комбинујемо древно умеће са модерним дизајном да створимо безвремени комади за ваш дом."
+    },
+    "help": "Изгубљени? Покушајте ове популарне секције:",
+    "footerMessage": "Изгубљени у нашем намештајном чуду? Дозволите нам да вас одведемо кући!",
+    "whoopsTitle": "Упс! Изгубљени у свемиру?",
+    "pageNotFoundMessage": "Страница коју тражите није пронађена :(",
+    "suggestHome": "Предлажемо да се вратите на почетну",
+    "backToHome": "Назад на Почетну"
   }
 }
