fix: adding translations

--- a/public/locales/al/translation.json
+++ b/public/locales/al/translation.json
@@ -60,6 +60,7 @@
     },
     "loading": "Duke ngarkuar produktet...",
     "noProducts": "Nuk ka produkte të disponueshme për momentin.",
+    "seeMoreProducts": "Shiko Më Shumë Produkte",
     "inStock": "Në stok",
     "outOfStock": "Jashtë stokut",
     "availableColors": "Ngjyrat e disponueshme:",
