--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -60,6 +60,7 @@
     },
     "loading": "Produkte werden geladen...",
     "noProducts": "Derzeit sind keine Produkte verfügbar.",
+    "seeMoreProducts": "Mehr Produkte Anzeigen",
     "inStock": "Auf Lager",
     "outOfStock": "Ausverkauft",
     "availableColors": "Verfügbare Farben:",
