--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -60,6 +60,7 @@
     },
     "loading": "Caricamento prodotti...",
     "noProducts": "Al momento non ci sono prodotti disponibili.",
+    "seeMoreProducts": "Vedi Altri Prodotti",
     "inStock": "Disponibile",
     "outOfStock": "Esaurito",
     "availableColors": "Colori disponibili:",
