--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -59,6 +59,7 @@
     },
     "loading": "Се вчитуваат производите...",
     "noProducts": "Моментално нема достапни производи.",
+    "seeMoreProducts": "Види Повеќе Производи",
     "inStock": "На залиха",
     "outOfStock": "Нема на залиha",
     "availableColors": "Достапни бои:",
