--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -59,6 +59,7 @@
     },
     "loading": "Учитавање производа...",
     "noProducts": "Тренутно нема доступних производа.",
+    "seeMoreProducts": "Погледај Више Производа",
     "inStock": "На складишту",
     "outOfStock": "Нема на складишту",
     "availableColors": "Доступне боје:",
