--- a/public/locales/hr/translation.json
+++ b/public/locales/hr/translation.json
@@ -59,6 +59,7 @@
     },
     "loading": "Učitavanje proizvoda...",
     "noProducts": "Trenutno nema dostupnih proizvoda.",
+    "seeMoreProducts": "Pogledaj Više Proizvoda",
     "inStock": "Na skladištu",
     "outOfStock": "Nema na skladištu",
     "availableColors": "Dostupne boje:",
